--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "finni-health-takehome",
   "version": "0.1.0",
-  "homepage": "https://ikim-2001.github.io/finni-health-takehome",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -28,9 +27,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
